# TinyRpc-

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
example/: friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpc_application.h  zookeeper_client.h
src/: CMakeLists.txt  logger.cc  mprpc_application.cc  mprpc_channel.cc  mprpc_config.cc  mprpc_controller.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpc_header.pb.cc  rpc_header.proto  rpc_provider.cc  rpcprovider.cc  zookeeper_client.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
test/logger/: CMakeLists.txt  testlog.cpp
test/protobuf/: CMakeLists.txt  main.cc  test.pb.cc  test.pb.h  test.proto
